--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -18,7 +18,6 @@
             <button class="subnavbtn"><a href="page1.html" style="display: block;">Events <i class="fa fa-caret-down"></i></a></button>
             <div class="subnav-content">
                 <a href="page1.html#Aquaintance">Aquaintance Party</a>
-                <!-- open the div for this category -->
                 <a href="page1.html#Christmas">Christmas Party</a> 
                 <a href="page1.html#Paskorus">Paskorus</a>            
                 <a href="page1.html#Dekada">Sayaw ng Dekada</a>       
@@ -33,17 +32,21 @@
     <div style="padding: 0 16px">
         <h1>Sampa '24</h1>
         <hr>
+        <h1>Video</h1>
+        <video width="600" preload autoplay controls>
+            <source src="../mmfiles/Lorem%20Ipsum%20Video.mp4" type="video/mp4">
+        </video>
+        <hr>
         <h2>New Pictures</h2>
         <div class="grid">
             <img src="../images/Aquaintance%20Party/1.JPG">
-            <!-- make images clickable to be brought to the section where the image is and open in large mode -->
-            <img src="../images/Aquaintance%20Party/2.JPG" height="210px" width="600px">
+            <img src="../images/Aquaintance%20Party/2.JPG" height="278px" width="750px">
             <img src="../images/Christmas%20Party/1.jpg">
             <img src="../images/Christmas%20Party/2.jpg">
             <img src="../images/Christmas%20Party/3.jpg">
             <img src="../images/Christmas%20Party/4.jpg">
             <img src="../images/Paskorus/1.JPG">
-            <img src="../images/Val%20Ed%20Outreach/3.jpg">
+            <img src="../images/Val%20Ed%20Outreach/3.jpg" height="570px">
             <img src="../images/Paskorus/2.JPG">
             <img src="../images/Paskorus/3.JPG">      
             <img src="../images/Paskorus/4.JPG">
