--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,6 +36,7 @@
         <video width="600" preload autoplay controls>
             <source src="../mmfiles/Lorem%20Ipsum%20Video.mp4" type="video/mp4">
         </video>
+        <p>Retrieved from: <a href="https://www.youtube.com/watch?v=7X8II6J-6mU">https://www.youtube.com/watch?v=7X8II6J-6mU</a></p>
         <hr>
         <h2>New Pictures</h2>
         <div class="grid">
