--- a/htdocs/page2.html
+++ b/htdocs/page2.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/styling.css">
+    <link rel="stylesheet" href="../css/sprites.css">
     <title>Sampa People</title>
     <meta charset="UTF-8">
     <meta name="author" content="Kenneth Samuel Tan">
@@ -10,38 +11,6 @@
     <meta name="revised" content="29-10-2020">
     <link rel="icon" href="icon.png" type="image/gif">
     <style>
-        .sprite-f {
-             background: url('../images/icon.png') no-repeat -182px -91px;
-             width: 37px;
-             height: 33px;
-        }
-        .sprite-f:hover {
-            background: url('../images/icon.png') no-repeat -182px -17px;
-        }
-        .sprite-t {
-             background: url('../images/icon.png') no-repeat -296px -91px;
-             width: 37px;
-             height: 33px;
-        }
-        .sprite-t:hover {
-            background: url('../images/icon.png') no-repeat -290px -17px;
-        }
-        .sprite-i {
-             background: url('../images/instagram.jpg') no-repeat;
-             width: 39px;
-             height: 36px;
-        }
-        .sprite-i:hover {
-            background: url('../images/instagram.jpg') no-repeat -38px -38px;
-        }
-        .sprite-s {
-             background: url('../images/spotify.png') no-repeat;
-             width: 39px;
-             height: 36px;
-        }
-        .sprite-s:hover {
-            background: url('../images/spotify.png') no-repeat -40px;
-        }
         a {
             padding-top: 8px;
             float: right;
