--- a/htdocs/page2.html
+++ b/htdocs/page2.html
@@ -45,101 +45,101 @@
     </div>
     <div style="padding: 0 16px">
         <hr>
-        <h3 style="float: left">Abdon</h3>
+        <h3>Abdon</h3>
         <a href="https://www.facebook.com/profile.php?id=100012307752813"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Albano</h3>
+        <h3>Albano</h3>
         <a href="https://www.facebook.com/alfonso.albano.79/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Consul</h3>
+        <h3>Consul</h3>
         <a href="https://www.facebook.com/jaredcedric.consul/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Guerra</h3>
+        <h3>Guerra</h3>
         <a href="https://www.facebook.com/royerikraphael.guerra/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Lopez</h3>
+        <h3>Lopez</h3>
         <a href="https://www.facebook.com/vinci.lopez.54/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Mariano</h3>
+        <h3>Mariano</h3>
         <a href="https://www.facebook.com/josh.mariano.jm/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Moren</h3>
+        <h3>Moren</h3>
         <a href="https://www.facebook.com/kujilorenzo.moren/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Navarro</h3>
+        <h3>Navarro</h3>
         <a href="https://www.facebook.com/roykevin.navarro.5/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Pablico</h3>
+        <h3>Pablico</h3>
         <a href="https://www.facebook.com/xxapab/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Ramirez</h3>
+        <h3>Ramirez</h3>
         <a href="https://www.facebook.com/zenseimobilelegends/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Recio</h3>
+        <h3>Recio</h3>
         <a href="https://www.facebook.com/why.do.you.read.these.1/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Rodrigo</h3>
+        <h3>Rodrigo</h3>
         <a href="https://www.facebook.com/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Shrestha</h3>
+        <h3>Shrestha</h3>
         <a href="https://www.facebook.com/profile.php?id=100006324330086"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Sibal</h3>
+        <h3>Sibal</h3>
         <a href="https://www.facebook.com/sean.sibal.3/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Tan</h3>
+        <h3>Tan</h3>
         <a href="https://www.facebook.com/kennethsamuel.tan/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Tayag</h3>
+        <h3>Tayag</h3>
         <a href="https://www.facebook.com/jarblueee/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Tolin</h3>
+        <h3>Tolin</h3>
         <a href="https://www.facebook.com/LuchTolin911/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Tropicales</h3>
+        <h3>Tropicales</h3>
         <a href="https://www.facebook.com/bertjacob.tropicales/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Villarin</h3>
+        <h3>Villarin</h3>
         <a href="https://www.facebook.com/renzel.villarin/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Austria</h3>
+        <h3>Austria</h3>
         <a href="https://www.facebook.com/ysabeldenise.austria/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Daran</h3>
+        <h3>Daran</h3>
         <a href="https://www.facebook.com/starlifters.sister/"><div class="sprite-f"></div></a>
         <a href="https://twitter.com/3donutsform3"><div class="sprite-t"></div></a>
         <a href="https://www.instagram.com/komborly/"><div class="sprite-i"></div></a>
         <a href="https://open.spotify.com/user/12170140069?si=igCNb7tWRzmJQs5OFz-KSQ"><div class="sprite-s"></div></a>
         <hr>
-        <h3 style="float: left">Domingo</h3>
+        <h3>Domingo</h3>
         <a href="https://www.facebook.com/12paula.bettina.domingo21/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Fabula</h3>
+        <h3>Fabula</h3>
         <a href="https://www.facebook.com/pia.fabula/"><div class="sprite-f"></div></a>
         <a href="https://twitter.com/turdletarou"><div class="sprite-t"></div></a>
         <hr>
-        <h3 style="float: left">Gonzalez</h3>
+        <h3>Gonzalez</h3>
         <a href="https://www.facebook.com/bernice.gonzalez428/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Longno</h3>
+        <h3>Longno</h3>
         <a href="https://www.facebook.com/michelle.piit/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Portugal</h3>
+        <h3>Portugal</h3>
         <a href="https://www.facebook.com/ysa.portugal.9/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Sacramento</h3>
+        <h3>Sacramento</h3>
         <a href="https://www.facebook.com/bbngca/"><div class="sprite-f"></div></a>
         <a href="https://twitter.com/bbngca"><div class="sprite-t"></div></a>
         <a href="https://www.instagram.com/bbngca/"><div class="sprite-i"></div></a>
         <a href="https://open.spotify.com/user/22uko5pnx56iqk54fajzaaqrq?si=b8EWK9qCTaSqzKfSEhVLEA/"><div class="sprite-s"></div></a>
         <hr>
-        <h3 style="float: left">Simangan</h3>
+        <h3>Simangan</h3>
         <a href="https://www.facebook.com/svesdamarie.simangan.5/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Tinaan</h3>
+        <h3>Tinaan</h3>
         <a href="https://www.facebook.com/Wata.Tinaan.28/"><div class="sprite-f"></div></a>
         <hr>
-        <h3 style="float: left">Ma'am Edlen</h3>
+        <h3>Ma'am Edlen</h3>
         <a href="https://www.facebook.com/edzwashere/"><div class="sprite-f"></div></a>
     </div>
 </body>
